fix overflow css bug

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -3,6 +3,7 @@ body {
   background-color: #ededed !important;
   font-weight: 400 !important;
   font-size: 0.9rem !important;
+  overflow:auto !important;
 }
 
 input {
